Completata Versione Base Login e Registrazione
(Manca il controllo di alcuni dati su registrazione, vedi la mail ecc...)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< Updated upstream
 <!DOCTYPE html>
 <html>
 <title> Paolo </title>
@@ -6,23 +5,10 @@
     
 </head>
 <body>
-        <p><a href="registrazione.html">Registrati Subito! </a></p>
+        <p><a href="php/register.php">Registrati Subito! </a></p>
         <p><a href="php/login.php">Login </a></p>
 
     </body>
 </html>
 
 
-=======
-<html>
-    <body>
-        <p> Merda</p>
-        <form action="index.php">
-            <input type="text" name="txt" />
-            <input type="submit" name="insert" value="insert" onclick="insert()" />
-            <input type="submit" name="select" value="select" onclick="select()" />
-        </form>
-    </body>
-</html>
-
->>>>>>> Stashed changes
