Stilata base per ottenimento dati riguardante i singoli cavalli
C'è da implementarla, (principalmente il nome che cecio deve aggiungere al db e poi la query che tira giù i risultati)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     
 </head>
 <body>
+        <p><a href="php/cavalli.php"> Cavalli</a></p>
         <p><a href="php/register.php">Registrati Subito! </a></p>
         <p><a href="php/login.php">Login </a></p>
-
     </body>
 </html>
 
