Aggiunte Gara e Visualizzazione Gara

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     
 </head>
-<body>
+    <body>
+        <p><a href="php/risultati.php">Risultati</a></p>
         <p><a href="php/cavalli.php"> Cavalli</a></p>
         <p><a href="php/register.php">Registrati Subito! </a></p>
         <p><a href="php/login.php">Login </a></p>
