--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     
 </head>
     <body>
+        <p><a href="php/Scommetti/scommetti.php">Scommetti Subito!</a></p>
         <p><a href="php/Visualizzazione_Gare/risultati.php">Risultati</a></p>
         <p><a href="php/Visualizzazione_Cavalli/cavalli.php"> Cavalli</a></p>
         <p><a href="php/Autenticazione/register.php">Registrati Subito! </a></p>
         <p><a href="php/Autenticazione/login.php">Login </a></p>
+        <p><a href="php/Autenticazione/logout.php">Logout</a></p>
     </body>
 </html>
 
