--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,7 @@
                 <li><a href="php/Scommetti/scommetti.php">Scommesse</a></li>
                 <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
                 <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+                <admin /> <!-- controlla sulla sessione per vedere se aggiungere funzionalità admin -->
                 <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
             </ul>
         </nav>
