--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
                 <li><a href="php/Scommetti/scommetti.php">Scommesse</a></li>
                 <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
                 <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-                <admin /> <!-- controlla sulla sessione per vedere se aggiungere funzionalità admin -->
+				<admin /> <!-- controlla sulla sessione per vedere se aggiungere funzionalità admin -->
                 <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
             </ul>
         </nav>
@@ -52,9 +52,9 @@
                 </dd>
             </div>
             <div class="dl-element left-element">
-                <dt>Valuta virtuale: Cookies</dt>
+                <dt>Valuta virtuale: BitSquits</dt>
                 <dd>
-                    <img src="images/cookies.jps" alt="Il simbolo della moneta é un bisotto" />
+                    <img src="images/bitsquits.jpg" alt="Il simbolo della moneta é un biscotto(con dentro un cavallo)" />
                     <!-- non so se vada messa, non é molto di contenuto -->
                     <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario.
                         Otterrai
