struttura parte admin

--- a/html/index.html
+++ b/html/index.html
@@ -2,72 +2,70 @@
 <html lang="it">
 
 <head>
-    <title>Ippodromo NO₂</title> <!-- nitrito hihihihi -->
-    <meta name="title" content="Ippodromo" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
-    <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+  <title>Ippodromo NO₂</title> <!-- nitrito hihihihi -->
+  <meta name="title" content="Ippodromo" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta charset="UTF-8">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
+  <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
 </head>
 
 <body>
-    <header>
-        <div id="breadcrumb">
-            <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
-            <ul>
-                <li lang="en">Home</li>
-            </ul>
-        </div>
-        <nav id="menu">
-            <ul>
-                <li lang="en">Home</li>
-                <li><a href="php/Scommetti/scommetti.php">Scommesse</a></li>
-                <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
-                <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-                <admin /> <!-- controlla sulla sessione per vedere se aggiungere funzionalità admin -->
-                <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
-            </ul>
-        </nav>
-        <img src="images/logo.jpg" alt="logo ippodromo rimuovi questo alt" />
-    </header>
-    <section>
-        <h1>Ippodromo NO₂</h1>
-        <dl id="home-content" class="content">
-            <div class="dl-element left-element">
-                <!-- left/right si puó mettere come id se serve -->
-                <dt>cose ippodromo</dt>
-                <dd>
-                    <img src="images/ippodromo.jpg" alt="Vista aerea notturna del nostro ippodromo" />
-                    <p>blah blah</p>
-                </dd>
-            </div>
-            <div class="dl-element right-element">
-                <dt>Scommesse</dt>
-                <dd>
-                    <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non é molto di contenuto -->
-                    <p>qui puoi fare scommesse in tempo reale ecc. ecc.</p>
-                </dd>
-            </div>
-            <div class="dl-element left-element">
-                <dt>Valuta virtuale: Cookies</dt>
-                <dd>
-                    <img src="images/cookies.jps" alt="Il simbolo della moneta é un bisotto" />
-                    <!-- non so se vada messa, non é molto di contenuto -->
-                    <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario.
-                        Otterrai
-                        non so quanti cookies gratuiti se decidi di registrarti!</p>
-                </dd>
-            </div>
-        </dl>
-    </section>
-    <footer>
-        <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
-        <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" /> <!-- cambiare src dopo aver validato -->
-        boh info varie su noi che non ricordo quali fossero ma si posso aggiungere
-    </footer>
+  <header>
+    <div id="breadcrumb">
+      <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
+      <ul>
+        <li lang="en">Home</li>
+      </ul>
+    </div>
+    <nav id="menu">
+      <ul>
+        <li lang="en">Home</li>
+        <li><a href="php/Scommetti/scommetti.php">Scommesse</a></li>
+        <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
+        <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+        <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
+      </ul>
+    </nav>
+    <img src="images/logo.jpg" alt="logo ippodromo rimuovi questo alt" />
+  </header>
+  <main>
+    <h1>Ippodromo NO₂</h1>
+    <dl id="home-content" class="content">
+      <div class="dl-element left-element">
+        <!-- left/right si puó mettere come id se serve -->
+        <dt>cose ippodromo</dt>
+        <dd>
+          <img src="images/ippodromo.jpg" alt="Vista aerea notturna del nostro ippodromo" />
+          <p>blah blah</p>
+        </dd>
+      </div>
+      <div class="dl-element right-element">
+        <dt>Scommesse</dt>
+        <dd>
+          <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non é molto di contenuto -->
+          <p>qui puoi fare scommesse in tempo reale ecc. ecc.</p>
+        </dd>
+      </div>
+      <div class="dl-element left-element">
+        <dt>Valuta virtuale: Cookies</dt>
+        <dd>
+          <img src="images/cookies.jps" alt="Il simbolo della moneta é un bisotto" />
+          <!-- non so se vada messa, non é molto di contenuto -->
+          <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario. Otterrai
+            non so quanti cookies gratuiti se decidi di registrarti!</p>
+        </dd>
+      </div>
+    </dl>
+  </main>
+  <footer>
+    <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
+    <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" /> <!-- cambiare src dopo aver validato -->
+    boh info varie su noi che non ricordo quali fossero ma si posso aggiungere
+  </footer>
 </body>
 
 </html>
