--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
                     <!-- left/right si puó mettere come id se serve -->
                     <dt>cose ippodromo</dt>
                     <dd>
-                        <img src="immagini/ippodromoNO.jpg" alt="Vista aerea notturna del nostro ippodromo" />
+                        <img src="images/ippodromoNO.jpg" alt="Vista aerea notturna del nostro ippodromo" />
                         <p>blah blah</p>
                     </dd>
                 </div>
                 <div class="dl-element right-element">
                     <dt>Scommesse</dt>
                     <dd>
-                        <img src="immagini/scommesse.jpg" alt="" /> <!-- non so se vada messa, non é molto di contenuto -->
+                        <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non é molto di contenuto -->
                         <p>qui puoi fare scommesse in tempo reale ecc. ecc.</p>
                     </dd>
                 </div>
                 <div class="dl-element left-element">
                     <dt>Valuta virtuale: Cookies</dt>
                     <dd>
-                        <img src="immagini/cookies.jps" alt="Il simbolo della moneta é un bisotto" />
+                        <img src="images/cookies.jps" alt="Il simbolo della moneta é un bisotto" />
                         <!-- non so se vada messa, non é molto di contenuto -->
                         <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario.
                             Otterrai
@@ -111,14 +111,14 @@
 </section>
 
 <section class="contentbox">
-    <div class="headline"></div>
-    <div class="text"></div>
-    <div class="text"></div>
-    <div class="text"></div>
-    <div class="text"></div>
-    <div class="text"></div>
-    <div class="text"></div>
-    <div class="text"></div>
+    <div class="headline"><h1>cose ippodromo</h1></div>
+    <div class="text"><p>blah</p></div>
+    <div class="text"><p>blah</p></div>
+    <div class="text"><p>blah</p></div>
+    <div class="text"><p>blah</p></div>
+    <div class="text"><p>blah</p></div>
+    <div class="text"><p>blah</p></div>
+    <div class="text"><p>blah</p></div>
     <div class="text"></div>
     <div class="text"></div>
     <div class="button"></div>
@@ -129,7 +129,7 @@
 
 <footer>
   <div class="content">
-      <div class="logo"></div>
+      <div><img class="logo" src="images/logo.jpg" alt="Logo"/></div>
       
       <nav>
         <ul>
@@ -140,8 +140,8 @@
   </nav>
   
 </div>
-<img id="img-valid-code" src="immagini/valid-xhtml10.png" alt="HTML valido"/>
-<img id="img-valid-css" src="immagini/vcss-blue.gif" alt="CSS valido"/>
+<img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido"/>
+<img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido"/>
 </footer>
 </body>
 
