--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -54,7 +54,7 @@
         </dt>
         <dd>
           <p><num-risultati /></p>
-          <p><a href="./admin_gare#aggiungiRisultato.php">Aggiungi risultati alle gare concluse</a></p>
+          <p><a href="../../php/Admin/aggiungiRisultati.php">Aggiungi risultati alle gare concluse</a></p>
         </dd>
       </dl>
     </nav>
