--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -47,7 +47,7 @@
         </dt>
         <dd>
           <p><num-gare /></p>
-          <p><a href="../../php/Admin/aggiungiGara.php">Gestisci le gare</a></p>
+          <p><a href="../../php/Admin/aggiungiGara.php">Crea nuove gare</a></p>
         </dd>
         <dt>
           <h2>Risultati</h2>
