--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -37,7 +37,7 @@
             Velocità:<input type="number" id="speed" placeholder="Inserire velocità del cavallo" name="velocita" value="5" min="1" max="10" required><br/>
             <input type="file" name="img" id="img" accept="image/*" required>
             <br />
-            <button type="submit" value="Upload Image" name="submit">Aggiungi alla lista il nuovo cavallo!</button>
+            <button id="btn" type="submit" value="Upload Image" name="submit">Aggiungi alla lista il nuovo cavallo!</button>
         </form>
         <textarea id="description" rows="4" cols="50" name="descrizione" form="inserimentoCavallo" placeholder="Inserire una breve descrizione del cavallo" required></textarea>
     </section>
