--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -11,14 +11,57 @@
     <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
     <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+
+    <script>
+        function impostaData()
+        {
+            var date = new Date();
+            var currentDate = date.toISOString().slice(0,10);
+        
+            var ora = date.getHours()+1;
+            var minuti = date.getMinutes();
+            if (date.getHours()+1 < 10) {
+                ora = "0" + ora;
+            }
+            if (date.getMinutes() < 10) {
+                minuti = "0" + minuti;
+            }
+            var currentTime = ora + ':' + minuti;
+        
+            document.getElementById('date').setAttribute("min", currentDate);
+            document.getElementById('date').setAttribute("value", currentDate);
+            document.getElementById('time').setAttribute("value", currentTime);
+        }
+
+        function controllaNumeroCavalli()
+        {
+            var x = document.getElementsByName("cavalli[]");
+            var i;
+            var tot=0;
+            for (i = 0; i < x.length; i++) {
+                if(x[i].checked==true && x[i].type=="checkbox")   
+                {
+                    tot++;
+                }           
+            }
+            if(tot>=4 && tot<=8)
+            {
+                document.getElementById('btn').disabled=false;
+            }
+            else
+            {
+                document.getElementById('btn').disabled=true;
+            }
+        }
+    </script>
 </head>
 
-<body>
+<body  onload="impostaData()">
     <header>
         <div id="breadcrumb">
             <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
             <ul>
-                <li lang="en">Aggiungi Gara</li>
+                <li lang="en">Aggiungi Gara (Ricorda, una gara deve avere almeno 4 cavalli e un massimo di 8)</li>
             </ul>
         </div>
         <nav id="menu">
@@ -32,11 +75,11 @@
     </header>
     <section>
         <form method="post" action="../Admin/caricaGara.php">
-            <h1>Scegli i dati della gara!</h1>         
+            <h1>Scegli i dati della gara! (Ricorda, una gara deve avere almeno 4 cavalli e un massimo di 8)</h1>         
             <input type="date" id="date" name="date" required>
-            <input type="time" id="time" name="time" min="08.00.00" required>
+            <input type="time" id="time" name="time" min="08:00:00" max="22:00:00" required>
             <cavalli />
-            <button type="submit" name="register">Inserisci</button>
+            <button id='btn' type="submit" name="register" disabled>Inserisci</button>
         </form>
     </section>
     <footer>
@@ -47,25 +90,3 @@
 
 </html>
 
-<script>
-var date = new Date();
-var currentDate = date.toISOString().slice(0,10);
-
-var ora = date.getHours()+1;
-var minuti = date.getMinutes();
-if (date.getHours()+1 < 10) {
-    ora = "0" + ora;
-}
-if (date.getMinutes() < 10) {
-    minuti = "0" + minuti;
-}
-var currentTime = ora + ':' + minuti;
-
-document.getElementById('date').setAttribute("min", currentDate);
-
-var min = "08:00:00";
-var max = "22:00:00";
-document.getElementById('time').setAttribute("value", currentTime);
-document.getElementById('time').setAttribute("min", min);
-document.getElementById('time').setAttribute("max", max);
-</script>
