Aggiunti controlli inserimento riusltati

--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -11,6 +11,28 @@
     <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
     <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+
+    <script>
+        function controllaPosizioni()
+        {    
+            var x = document.getElementsByName("cavalli[]"); 
+            var y = x;
+            var uguali = false;
+            
+            for(i=0;i<x.length;i++)
+            {                
+                for(j=0;j<x.length;j++)
+                {
+                    if(x[i].value==x[j].value && x[i].value!="" && x[j].value!="" && i!=j)
+                    {
+                        uguali = true;
+                    }
+                }
+            }       
+            document.getElementById('btn').disabled=uguali;
+        }
+    </script>
+
 </head>
 
 <body>
@@ -35,7 +57,7 @@
             <h1>Inserisci i dati riguardanti questa gara!</h1>         
             <risultati />
             <br />
-            <button type="submit" name="register">Inserisci</button>
+            <button id="btn" type="submit" name="register" disabled>Inserisci</button>
         </form>
     </section>
     <footer>
