--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
 
-        <section class="cards">
+        <div class="cards">
             <div class="card">
               <img src="https://imgplaceholder.com/500x300/transparent/ddd/ion-image" alt="">
               <div class="content">
@@ -108,7 +108,7 @@
         <div class="button"></div>
     </div>
 </div>
-</section>
+</div>
 
 <section class="contentbox">
     <div class="headline"><h1>cose ippodromo</h1></div>
