cavalli page cssata

--- a/html/index.html
+++ b/html/index.html
@@ -39,10 +39,12 @@
       <div class="nav-bg"></div>
       <h1 lang="en">Home</h1>
       <ul>
-        <li lang="en">Home</li>
+        <li lang="en"><a>Home</a></li>
         <li><a href="php/Scommetti/scommetti.php">Scommesse</a></li>
         <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
         <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+        <li><a> / </a></li>
+        <li><a href="php/Autenticazione/login.php">Accedi</a></li>
     </ul>
 </nav>
 
