--- a/html/gare/risultati.html
+++ b/html/gare/risultati.html
@@ -2,8 +2,8 @@
 <html lang="it">
 
 <head>
-  <title><nome-cavallo /> - Ippodromo NO₂</title>
-  <meta-title-cavallo />
+  <title>Risultati - Ippodromo NO₂</title> <!-- oppure &#8322; -->
+  <meta name="title" content="Risultati gare concluse - Ippodromo NO₂" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
@@ -16,49 +16,35 @@
 <body>
   <header>
     <div id="breadcrumb">
+      <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
       <ul>
         <li lang="en">Home</li>
-        <li>Cavalli</li>
-        <li><nome-cavallo /></li>
+        <li>Risultati gare</li>
       </ul>
     </div>
     <nav id="menu">
       <ul>
         <li lang="en"><a href="./home.php">Home</a></li>
         <li><a href="./scommesse.php">Scommesse</a></li>
-        <li><a href="./gare.php">Gare</a></li>
-        <li><a href="./cavalli.php"></a>Cavalli</li>
+        <li>Gare</li>
+        <li><a href="./cavalli.php">Cavalli</a></li>
         <li><a href="./chi_siamo.php">Chi siamo</a></li>
-        <admin />
-        <autenticazione />
       </ul>
     </nav>
     <img src="images/logo.jpg" alt="" />
   </header>
   <main>
-    <dl class="info-cavallo">
-      <dt>
-        <h1>
-          <nome-cavallo />
-        </h1>
-      </dt>
-      <dd id="descrizione-cavallo">
-        <p><descrizione /></p>
-        <h2>Fiducia</h2>
-        <p><fiducia /></p>
-        <h2>Velocità</h2>
-        <p><velocita /></p>
-        <h2>Stanchezza</h2>
-        <p><stanchezza /></p>
-        <risultati-gare />
-        <img-cavallo />
-      </dd>
-    </dl>
-    <p><a href='cavalli.php'> Torna indietro </a></p>
+    <h2>Gare concluse</h2>
+    <ol>
+      <lista-gare />
+    </ol>
+    <cambia-pagina />
+    <p><a href='../../'> Torna indietro </a></p>
   </main>
   <footer>
     <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
     <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" />
+    <!-- cambiare src dopo aver validato -->
     boh info varie su noi che non ricordo quali fossero ma si posso aggiungere
   </footer>
 </body>
