--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -11,8 +11,6 @@
   <link rel="stylesheet" type="text/css" href="../../style/base.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
-  <script language="JavaScript" type="text/javascript" src="../../script/jquery.js"></script>
-  <script language="JavaScript" type="text/javascript" src="../../script/navbar.js"></script>
 </head>
 
 <body>
@@ -27,7 +25,7 @@
       <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
       <li><a >Cavalli</a></li>
       <li><a> / </a></li>
-      <li><a href="../Autenticazione/login.php">Accedi</a></li>
+      <autenticazione />
     </ul>
   </nav>
 
