--- a/html/gare/risultati.html
+++ b/html/gare/risultati.html
@@ -2,7 +2,8 @@
 <html lang="it">
 
 <head>
-  <title><nome-cavallo /> - Ippodromo NO₂</title>
+  <title>Risultati - Ippodromo NO₂</title> <!-- oppure &#8322; -->
+  <meta name="title" content="Risultati gare concluse - Ippodromo NO₂" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
@@ -13,32 +14,35 @@
 </head>
 
 <body>
-  <nav class="navTop">
-    <div class="nav-bg"></div>
-    <h1 lang="en">Home</h1>
-    <h1> > </h1>
-    <h1>Cavalli</h1>
-    <ul>
-      <li><a href="../../">Home</a></li>
-      <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
-      <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
-      <li><a href='cavalli.php'>Cavalli</a></li>
-      <li><a> / </a></li>
-      <autenticazione />
-    </ul>
-  </nav>
+  <header>
+    <nav class="navTop">
+      <div class="nav-bg"></div>
+      <h1 lang="en">Home</h1>
+      <h1> > </h1>
+      <h1>Risultati gare</h1>
 
-  <apertura-cavallo />
+      <ul>
+        <li lang="en"><a href=".,/../index.php">Home</a></li>
+        <li><a href="../Scommetti/scommesse.php">Scommesse</a></li>
+        <li><a>Gare</a></li>
+        <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+        <li><a href="./chi_siamo.php">Chi siamo</a></li>
+        <li><a> / </a></li>
+        <autenticazione />
+      </ul>
+    </nav>
+  </header>
+
+  <div class="init">
+    <h1>Gare concluse</h1>
+  </div>
 
   <div class="wrapper">
     <div class="wrap">
-
       <main>
-        <div class="cards">
-          <info-cavallo />
-
-          <gare-cavallo />
-        </div>
+        <ol>
+          <lista-gare />
+        </ol>
       </main>
 
     </div>
