--- a/html/index.html
+++ b/html/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" type="text/css" href="style/base.css"/>
     <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
     <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
-    <script language="JavaScript" type="text/javascript" src="script/jquery.js"></script>
-    <script language="JavaScript" type="text/javascript" src="script/navbar.js"></script>
 </head>
 
 <body>
@@ -44,7 +42,7 @@
         <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
         <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
         <li><a> / </a></li>
-        <li><a href="php/Autenticazione/login.php">Accedi</a></li>
+        <autenticazione />
     </ul>
 </nav>
 
