Funzioni di autenticazione completate
Tutti i file (se non ho sbagliato qualcosa) che visualizzano cose diverse a seconda si sia loggati o meno adesso riescono a farlo

--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -25,7 +25,7 @@
         <li>Dashboard</li>
         <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
         <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
-        <li><a href="../../php/Autenticazione/logout.php">Abbandona pannello</a></li>
+        <li><a href="javacript:history.back()">Abbandona pannello</a></li>
         <autenticazione />
       </ul>
     </nav>
