--- a/html/cavalli/cavalloSelezionato.html
+++ b/html/cavalli/cavalloSelezionato.html
@@ -42,7 +42,40 @@
       </main>
 
     </div>
-  </div>
+    <nav id="menu">
+      <ul>
+        <li lang="en"><a href="./home.php">Home</a></li>
+        <li><a href="./scommesse.php">Scommesse</a></li>
+        <li><a href="./gare.php">Gare</a></li>
+        <li><a href="./cavalli.php"></a>Cavalli</li>
+        <li><a href="./chi_siamo.php">Chi siamo</a></li>
+        <admin />
+        <autenticazione />
+      </ul>
+    </nav>
+    <img src="images/logo.jpg" alt="" />
+  </header>
+  <main>
+    <dl class="info-cavallo">
+      <dt>
+        <h1>
+          <nome-cavallo />
+        </h1>
+      </dt>
+      <dd id="descrizione-cavallo"> <!-- mettere ognuno di questi come un elemento della lista -->
+        <p><descrizione /></p>
+        <h2>Fiducia</h2>
+        <p><fiducia /></p>
+        <h2>Velocità</h2>
+        <p><velocita /></p>
+        <h2>Stanchezza</h2>
+        <p><stanchezza /></p>
+        <risultati-gare />
+        <img-cavallo />
+      </dd>
+    </dl>
+    <p><a href='cavalli.php'> Torna indietro </a></p>
+  </main>
   <footer>
     <div class="content">
       <div><img class="logo" src="../../images/logo.jpg" alt="Logo"/></div>
