--- a/html/gare/risultati.html
+++ b/html/gare/risultati.html
@@ -22,12 +22,13 @@
       <h1>Risultati gare</h1>
 
       <ul>
-        <li lang="en"><a href=".,/../index.php">Home</a></li>
+        <li lang="en"><a href="../../index.php">Home</a></li>
         <li><a href="../Scommetti/scommesse.php">Scommesse</a></li>
         <li><a>Gare</a></li>
         <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
         <li><a href="./chi_siamo.php">Chi siamo</a></li>
         <li><a> / </a></li>
+        <admin />
         <autenticazione />
       </ul>
     </nav>
