--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -25,6 +25,7 @@
       <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
       <li><a >Cavalli</a></li>
       <li><a> / </a></li>
+      <admin />
       <autenticazione />
     </ul>
   </nav>
