--- a/html/index.html
+++ b/html/index.html
@@ -42,6 +42,7 @@
         <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
         <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
         <li><a> / </a></li>
+        <admin />
         <autenticazione />
     </ul>
 </nav>
