--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -39,7 +39,7 @@
         </dt>
         <dd>
           <p><num-cavalli /> <!-- 21 cavalli inseriti --></p>
-          <p><a href="AggiungiCavallo.html">Gestici i cavalli</a></p>
+          <p><a href="../../html/admin/aggiungiCavallo.html">Gestici i cavalli</a></p>
         </dd>
       </dl>
         <dt>
