--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -81,7 +81,7 @@
         <img src="../../images/logo.jpg" alt="logo ippodromo rimuovi questo alt" />
     </header>
     <section>
-        <form method="post" action="../Admin/caricaGara.php">
+        <form method="post" action="../Admin/aggiungiGara.php">
             <h1>Scegli i dati della gara! (Ricorda, una gara deve avere almeno 4 cavalli e un massimo di 8)</h1>         
             <input type="date" id="date" name="date" required>
             <input type="time" id="time" name="time" max="22:00:00" required>
