--- a/html/admin/gestisciCavalli.html
+++ b/html/admin/gestisciCavalli.html
@@ -11,22 +11,19 @@
   <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
-
-  <script type="text/javascript" src="../../script/controlli.js"></script>
-
 </head>
 
 <body>
   <header>
     <div id="breadcrumb">
-      <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
       <ul>
-        <li lang="en">Aggiungi Cavallo</li>
+        <li>Pannello amministratore</li>
+        <li>Gestione cavalli</li>
       </ul>
     </div>
     <nav id="menu">
       <ul>
-        <li lang="en"><a href="../../php/Admin/admin.php">Torna al pannello</a></li>
+        <li lang="en"><a href="admin.php">Torna al pannello</a></li>
         <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
         <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
       </ul>
@@ -34,14 +31,21 @@
     <img src="../../images/logo.jpg" alt="logo ippodromo rimuovi questo alt" />
   </header>
   <section>
-    <form method="post" action="../../php/Admin/aggiungiRisultati.php" id="inserimentoCavallo"
-      enctype="multipart/form-data">
-      <h1>Inserisci i dati riguardanti questa gara!</h1>
-      <risultati />
-      <br />
-      <button id="btn" type="submit" name="register" disabled>Inserisci</button>
-    </form>
+    <a href="../../html/admin/aggiungiCavallo.html">Inserisci un nuovo cavallo</a> <!-- volendo si puó nascondere/visualizzare con js invece che cambiare pagina -->
+    <table>
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Opzioni</th>
+        </tr>
+      </thead>
+      <tfoot></tfoot>
+      <tbody>
+        <lista-cavalli />
+      </tbody>
+    </table>
   </section>
+  <p><a href="javascript:history.back()">Torna indietro</a></p>
   <footer>
     <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
     <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" /> <!-- cambiare src dopo aver validato -->
