Aggiunta possibilità di eliminare cavallo (con controllini)

--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -54,7 +54,7 @@
         </dt>
         <dd>
           <p><num-risultati /></p>
-          <p><a href="../../html/admin/inserisciRisultati.html">Aggiungi risultati alle gare concluse</a></p>
+          <p><a href="../../php/admin/aggiungiRisultati.php">Aggiungi risultati alle gare concluse</a></p>
         </dd>
       </dl>
     </nav>
