--- a/html/scommesse/scommesse.html
+++ b/html/scommesse/scommesse.html
@@ -26,7 +26,7 @@
     <nav id="menu">
       <ul>
         <li lang="en"><a href="./home.php">Home</a></li>
-        <li><a href="./scommesse.php">Scommesse</a></li>
+        <li><a href="./scommetti.php">Scommesse</a></li>
         <li><a href="./gare.php">Gare</a></li>
         <li><a href="./cavalli.php">Cavalli</a></li>
         <li><a href="./chi_siamo.php">Chi siamo</a></li>
