--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -47,7 +47,7 @@
         </dt>
         <dd>
           <p><num-gare /></p>
-          <p><a href="../../html/admin/aggiungiGara.html">Crea nuove gare</a></p>
+          <p><a href="../../php/admin/aggiungiGara.php">Crea nuove gare</a></p>
         </dd>
         <dt>
           <h2>Risultati</h2>
