--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -42,7 +42,7 @@
       <input type="file" name="img" id="img" accept="image/*" required><br />
       <button id="btn" type="submit" value="Upload Image" name="submit">Aggiungi alla lista il nuovo cavallo!</button>
     </form>
-    <textarea id="description" rows="4" cols="50" name="descrizione" form="inserimentoCavallo"
+    <textarea id="description" rows="4" cols="50" name="descrizione" maxlength="255" form="inserimentoCavallo"
       placeholder="Inserire una breve descrizione del cavallo" required></textarea>
   </section>
   <footer>
