--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -40,7 +40,7 @@
       <input type="date" id="date" name="date" required>
       <input type="time" id="time" name="time" max="22:00:00" required>
       <cavalli />
-      <button id='btn' type="submit" name="register" >Inserisci</button>
+      <button id='btn' type="submit" name="register" disabled>Inserisci</button>
     </form>
   </section>
   <footer>
