--- a/html/gare/garaSelezionata.html
+++ b/html/gare/garaSelezionata.html
@@ -23,7 +23,7 @@
 
       <ul>
         <li lang="en"><a href="../../index.php">Home</a></li>
-        <li><a href="../Scommetti/scommesse.php">Scommesse</a></li>
+        <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
         <li><a href="risultati.php">Gare</a></li>
         <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
         <li><a href="./chi_siamo.php">Chi siamo</a></li>
