Completato pannello admin (close #3)

--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -41,6 +41,8 @@
       Velocità:<input type="number" id="speed" placeholder="Inserire velocità del cavallo" name="velocita" value="5" min="1" max="10" required><br />
       <input type="file" name="img" id="img" accept="image/*" required><br />
       <button id="btn" type="submit" value="Upload Image" name="submit">Aggiungi alla lista il nuovo cavallo!</button>
+      <textarea id="description" rows="4" cols="50" name="descrizione" form="inserimentoCavallo"
+        placeholder="Inserire una breve descrizione del cavallo" required></textarea>
     </form>
     <textarea id="description" rows="4" cols="50" name="descrizione" maxlength="255" form="inserimentoCavallo"
       placeholder="Inserire una breve descrizione del cavallo" required></textarea>
