--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -21,7 +21,8 @@
     <div id="breadcrumb">
       <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
       <ul>
-        <li lang="en">Aggiungi Gara (Ricorda, una gara deve avere almeno 4 cavalli e un massimo di 8)</li>
+        <li>Pannello amministratore</li>
+        <li>Aggiungi Gara</li>
       </ul>
     </div>
     <nav id="menu">
@@ -40,7 +41,7 @@
       <input type="date" id="date" name="date" required>
       <input type="time" id="time" name="time" max="22:00:00" required>
       <cavalli />
-      <button id='btn' type="submit" name="register" disabled>Inserisci</button>
+      <button id='btn' type="submit" name="register" disabled="disabled">Inserisci</button>
     </form>
   </section>
   <footer>
