--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -34,14 +34,11 @@
     <img src="../../images/logo.jpg" alt="logo ippodromo rimuovi questo alt" />
   </header>
   <section>
-    <form method="post" action="../../php/Admin/aggiungiRisultati.php" id="inserimentoCavallo"
-      enctype="multipart/form-data">
-      <h1>Inserisci i dati riguardanti questa gara!</h1>
-      <risultati />
-      <br />
-      <button id="btn" type="submit" name="register" disabled>Inserisci</button>
-    </form>
+      <risultato-inserimento />
+      <lista-gare />
+      <inserimento-gara-selezionata />
   </section>
+  <p><a href="../../php/Admin/inserisciRisultati.php">Torna ai risultati</a></p>
   <footer>
     <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
     <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" /> <!-- cambiare src dopo aver validato -->
