--- a/html/gare/garaSelezionata.html
+++ b/html/gare/garaSelezionata.html
@@ -20,6 +20,9 @@
       <h1 lang="en">Home</h1>
       <h1> > </h1>
       <h1>Risultati gare</h1>
+      <h1> > </h1>
+      <h1>Classifica</h1>
+
 
       <ul>
         <li lang="en"><a href="../../index.php">Home</a></li>
