--- a/html/scommesse/scommesse.html
+++ b/html/scommesse/scommesse.html
@@ -20,12 +20,12 @@
         <div class="nav-bg"></div>
         <h1 lang="en">Home</h1>
         <h1> > </h1>
-        <h1>Risultati gare</h1>
+        <h1>Scommesse</h1>
 
         <ul>
           <li lang="en"><a href="../../index.php">Home</a></li>
           <li><a>Scommesse</a></li>
-          <li><a href="../Visualizza_Gare/risultati.php">Gare</a></li>
+          <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
           <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="./chi_siamo.php">Chi siamo</a></li>
           <li><a> / </a></li>
