--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -2,17 +2,36 @@
 <html>
 
 <head>
-  <title>Login</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
-  <link rel="stylesheet" href="/css/style.css">
+	<title>Login</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
+	<link rel="stylesheet" type="text/css" href="../../style/base.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="style/small.css" media="" />
+	<link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
 </head>
+<body>
+	<header>
+    <nav class="navTop">
+      <div class="nav-bg"></div>
+      <h1 lang="en">Home</h1>
+      <h1> > </h1>
+      <h1>Risultati gare</h1>
 
-<form method="post" name="Form" action="login.php">
-  <h1>Login</h1>
-  <input type="text" id="username" placeholder="Username" name="username" required>
-  <input type="password" id="password" placeholder="Password" name="password" required>
-  <button type="submit" name="login">Accedi</button>
-</form>
-<p><a href="../../"> Torna Indietro </a></p>
-
+      <ul>
+        <li lang="en"><a href="../../index.php">Home</a></li>
+        <li><a href="../../php/Scommetti/scommetti.php">Scommesse</a></li>
+        <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
+        <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+        <li><a> / </a></li>
+        <li><a href='../../php/Autenticazione/register.php'>Registrati</a></li>
+      </ul>
+    </nav>
+  </header>
+	<form method="post" name="Form" action="login.php">
+		<h1>Login</h1>
+		<input type="text" id="username" placeholder="Username" name="username" required>
+		<input type="password" id="password" placeholder="Password" name="password" required>
+		<button type="submit" name="login">Accedi</button>
+	</form>
+	<p><a href="../../"> Torna Indietro </a></p>
+</body>
 </html>
