--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -4,6 +4,9 @@
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
   <script type="text/javascript" src="../../script/controlli.js"></script>
+  <link rel="stylesheet" type="text/css" href="../../style/base.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
+  <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
 </head>
 
 <body>
