--- a/html/gare/risultati.html
+++ b/html/gare/risultati.html
@@ -10,7 +10,7 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <link rel="stylesheet" type="text/css" href="../../style/base.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
-  <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+  <link rel="stylesheet" type="text/css" href="../../style/base.css" media="print" />
 </head>
 
 <body>
