--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -2,8 +2,8 @@
 <html lang="it">
 
 <head>
-  <title>Aggiungi Cavallo</title> <!-- nitrito hihihihi -->
-  <meta name="title" content="aggiungi-gara" />
+  <title>Inserisci risultati gara</title> <!-- nitrito hihihihi -->
+  <meta name="title" content="inserisci-risultati-gara" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
