--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 
+<script type="text/javascript">
+  location.href = "../autenticazione/registerjs/register.html";
+</script>
+
+<noscript>
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
   <script type="text/javascript" src="../../script/controlli.js"></script>
@@ -29,5 +34,6 @@
   </form>
   <p><a href="../../"> Torna Indietro </a></p>
 </body>
+</noscript>
 
 </html>
