--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -4,6 +4,10 @@
 <head>
   <title>Aggiungi Gara</title> <!-- nitrito hihihihi -->
   <meta name="title" content="aggiungi-gara" />
+  <noscript>
+    <style>html{display:none;}</style>
+    <meta http-equiv="refresh" content="0.0;url=aggiungiGaraNoJs.php">
+  </noscript>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
